--- a/workshop/workshop.yaml
+++ b/workshop/workshop.yaml
@@ -1,9 +1,5 @@
 ---
-name: Bookbag Template
+name: OpenShift Application Migration Lab 
 modules:
   activate:
-    - overview
-    - prepare-environment
-    - exercises
-    - cleanup
-    - solving-resetting
+    - CAM-LAB 
